2008-03-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml.el (mml-menu): Improve help entries.  Move Sign/Encrypt Part.
	(mml-dnd-attach-options): Fix typo in custom choice.

	* gnus-group.el (gnus-group-read-ephemeral-gmane-group): Change
	nndoc-article-type to mbox.
	(gnus-group-read-ephemeral-gmane-group-url): Support permalink.

	* mm-decode.el (mm-text-html-renderer): Prefer w3m over w3.  Fall back
	to nil, instead of html2text.

	* imap.el (imap-debug): Add `imap-ping-server'.

	* gnus-bookmark.el: Add FIXMEs.

	* message.el (message-form-letter-separator)
	(message-send-form-letter-delay): New variables.
	(message-send-form-letter): Use them.  New command to send form
	letters.  Requested by Uwe Siart.
	(message-send-mail-function): Doc fix.  Add "Other" custom option.

2008-02-29  Andreas Seltenreich  <andreas@gate450.dyndns.org>

	* nnweb.el (nnweb-google-parse-1): Fix date parsing on articles with
	empty author.

2008-02-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-marks): Add variable for
	customization of marks and their appearance.
	(gnus-registry-read-mark): Use it.
	(gnus-registry-do-marks): Add utility function to loop through
	`gnus-registry-marks'.
	(gnus-registry-install-shortcuts-and-menus): Add function to install
	shortcuts and menus.
	(gnus-registry-initialize): Use it.
	(gnus-registry-default-mark): Clarify documentation.

2008-02-29  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el, gnus-bookmark.el, gnus-dired.el, gnus-draft.el:
	* gnus-group.el, gnus-msg.el, gnus-score.el, gnus-sum.el, gnus-util.el:
	* gnus.el, mail-source.el, message.el, mm-decode.el, mm-uu.el, mml.el:
	* nnmail.el, pop3.el, smiley.el, smime.el, spam-report.el:
	Change defcustom :version from 23.0 to 23.1.

2008-02-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-follow-group-p)
	(gnus-registry-post-process-groups): Add functions to aid registry
	splitting and improve logging.  Clarify behavior in function